--- a/style.css
+++ b/style.css
@@ -28,11 +28,12 @@ h2 {
 input[type="file"],
 input[type="text"],
 button {
-    padding: 10px; /* Espacement intérieur */
-    margin: 5px; /* Espacement extérieur */
-    border: 1px solid #ccc; /* Bordure grise */
-    border-radius: 5px; /* Coins arrondis */
-    width: calc(100% - 22px); /* Largeur en tenant compte du padding et de la bordure */
+    background-color: blue;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-top: 10px;
 }
 
 button {
